<resources>
    <string name="app_name">Paradisonesia</string>
    <string name="login">Login</string>
    <string name="facebook_app_id" translatable="false">1179502965813030</string>
    <string name="facebook_client_token" translatable="false">2c6f38ab0a7200ab4a96117812235e8f</string>
    <string name="todo">todo</string>
    <string name="main_activity">Main Activity</string>
    <!--    Firebase auth message-->
    <string name="badly_format_email">The email address is badly formatted.</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="label_booking">Booking</string>
    <string name="label_home">Home</string>
    <string name="label_inbox">Inbox</string>
    <string name="label_account">Account</string>
    <string name="empty_fields">Please fill in the %1$s field</string>
    <string name="wrong_format">%1$s wrong format</string>
    <string name="wrong_length_phone">Phone number must be 12 characters long (08…)</string>
    <string name="minimum_characters">%1$s minimum 8 characters</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_email">Email</string>
    <string name="label_birthdate">Birthdate</string>
    <string name="label_address">Address</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_password">Password</string>
    <string name="label_legal">By continuing, you agree with our <a href="https://google.com">Term &amp; Conditions</a> and <a href="https://google.com">Privacy Policy</a></string>
    <string name="label_register">Register</string>
    <string name="label_or_register_with">or register with</string>
    <string name="label_already_have_an_account">Already have an account?</string>
    <string name="label_login">Login</string>
    <string name="label_forgot_password_answer">Forgot Password ?</string>
    <string name="label_or_login_with">or login with</string>
    <string name="label_login_instruction">You are not logged in. Please login</string>
    <string name="label_complete_profile_instruction">Please complete your profile</string>
    <string name="label_verify_email_instruction">Please verify your email</string>
    <string name="label_here">here</string>
    <string name="label_search_destinations_items">Search destinations, items…</string>
    <string name="label_categories">Categories</string>
    <string name="label_all_categories">All Categories</string>
    <string name="label_popular_destination">Popular Destination</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="label_instruction_forgot_password">Enter your registered email to reset your password</string>
    <string name="label_send">Send</string>
    <string name="label_account_verification">Account Verification</string>
    <string name="label_account_verification_instruction">Hi, thanks for getting your account. Check email %1$s to verify your Paradisonesia account.</string>
    <string name="label_resend_the_verification_email">Resend the verification email</string>
    <string name="label_resend">Resend</string>
    <string name="label_edit_profile_data">Edit Profile Data</string>
    <string name="label_wishlist">Wishlist</string>
    <string name="label_settings">Settings</string>
    <string name="label_help_support">Help &amp; Support</string>
    <string name="label_term_conditions">Term &amp; Conditions</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_register_as_a_merchant">Register as a Merchant</string>
    <string name="label_switch_as_merchant">Switch as merchant</string>
    <string name="label_switch_as_customer">Switch as customer</string>
    <string name="label_version">Version 0.0.1</string>
    <string name="label_account_greetings">Halo, %1$s</string>
    <string name="label_bank_account">Bank Account</string>
    <string name="label_fill_data_forms_merchant">Fill data in the forms below to register as a merchant</string>
    <string name="name1">Mandatory field 1<font color='#FF0000'>*</font></string>
    <string name="label_merchant_name">Merchant Name</string>
    <string name="merchant_address">Merchant Address</string>
    <string name="label_identity_card_number">Identity Card Number</string>
    <string name="label_description">Description</string>
    <string name="label_identity_card_mandatory">Identity Card<font color='#FF0000'>*</font></string>
    <string name="label_submit">Submit</string>
    <string name="label_merchant_submission">Merchant Submission</string>
    <string name="label_please_wait">Please Wait…</string>
    <string name="label_sub_title_submission_reviewed">Your Application is being reviewed</string>
    <string name="label_rejected">Rejected</string>
    <string name="label_sub_title_submission_rejected">Your Application is being Rejected. You can Resubmit your Application</string>
    <string name="label_accepted">Accepted</string>
    <string name="label_sub_title_submission_accepted">Your Application is being Accepted</string>
    <string name="resubmit">Resubmit</string>
    <string name="label_go_to_merchant_page">Go to Merchant Page</string>
    <string name="label_cant_accessed">Can’t Accessed?</string>
    <string name="label_sub_title_cant_access">You have to login as a customer first to use all the features of the application</string>
    <string name="label_go_to_login_page">Go to login page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_category">Category</string>
    <string name="label_category_count">Category (%1$d)</string>
    <string name="label_location">Location</string>
    <string name="label_location_count">Location (%1$d)</string>
    <string name="label_search_city_or_product">Search city or product</string>
    <string name="label_rating">Rating</string>

    <!-- Inbox Fragment -->
    <string name="you_dont_have_any_message_yet">You don\'t have any message yet</string>
    <string name="your_message_will_appear">Your message will appear here automatically</string>

    <!-- Booking Fragment -->
    <string name="in_process">In Process</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="you_dont_have_any_booking_yet">You don\'t have any booking yet</string>
    <string name="your_booking_will_appear">Your bookings will appear here automatically</string>
    <string name="cd_icon_booking_empty">Icon Booking Empty</string>

    <!-- Account Fragment -->
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_in">Sign In</string>
    <string name="signed_in">Signed In</string>

    <!-- Sign In Fragment -->
    <string name="does_not_have_an_account">Doesn\'t have an account?</string>
    <string name="register_here">Register here</string>

    <!-- Edit Profile -->
    <string name="edit_profile_data">Edit Profile Data</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="address">Address</string>
    <string name="confirm">Confirm</string>
    <string-array name="gender_spinner">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="customize_your_paradisonesia">Customize your paradisonesia profile data by clicking the icon the icon</string>

    <!-- Filter Fragment -->
    <string name="price_limit">Price Limit (Rp)</string>
    <string name="rating">Rating</string>
    <string name="availability_date">Availability Date</string>
    <string name="start_date">Start Date</string>
    <string name="apply">Apply</string>

    <!-- Sort Filter -->
    <string name="lowest_price">Lowest Price</string>
    <string name="highest_price">Highest Price</string>
    <string name="highest_rating">Highest Rating</string>


    <!-- Product Fragment -->
    <string name="final_price">Rp. %1$s</string>
    <string name="discounted_price"> <strike>Rp. %1$s</strike> </string>
    <string name="promo">Promo</string>
    <string name="per_pax">/pax</string>
    <string name="reviews_w_value">(%1$d reviews)</string>
    <string name="description">Description</string>
    <string name="tanggal_pelaksanaan_w_value">%1$s - %2$s</string>
    <string name="result">%1$d result for %2$s</string>
    <string name="next">Next</string>
    <string name="previous">Prev</string>
    <string name="page">Page</string>
    <string name="label_review">Review</string>

    <!-- Product Detail Fragment Expand -->
    <string name="favorite">%1$d favorites</string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="tanggal_pelaksanaan">Tanggal Pelaksanaan</string>
    <string name="rencana_perjalanan">Rencana Perjalanan</string>
    <string name="include_exclude">Include &amp; Exclude</string>
    <string name="include">Include</string>
    <string name="exclude">Exclude</string>
    <string name="fasilitas_layanan">Fasilitas &amp; Layanan</string>
    <string name="faq">FAQ</string>
    <string name="syarat_ketentuan">Syarat &amp; Ketentuan</string>
    <string name="penilaian_produk">Penilaian Produk</string>
    <string name="paket_lainnya">Paket Lainnya</string>
    <string name="question_answer"><![CDATA[<b>Question %1$s :</b> <br> %2$s <br><b>Answer %3$s :</b> <br>  %4$s <br>]]> </string>
    <string name="terms">%1$d. %2$s \n</string>

    <!-- penilaian produk -->
    <string name="rb_rating_num">%1$s/5 (%2$d ulasan)</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="anonymous">Anonymous</string>
    <string name="no_review">There\'s no review on this product, be the first to review this product</string>

    <!-- schedules -->
    <string name="hari_ke">Hari ke-%1$d</string>
    <string name="time_schedules">%1$s - %2$s WIB</string>

    <!-- faqs -->
    <string name="faq_question">%1$d. %2$s </string>
    <string name="hide">Hide</string>
    <string name="question">Question</string>

    <!-- Merchant Register -->
    <string name="error_merchant_name">Name must be filled</string>
    <string name="error_merchant_address">Address must be filled</string>
    <string name="error_merchant_description">Description must be filled</string>
    <string name="error_merchant_id_number_blank">ID card number must be filled</string>
    <string name="error_merchant_id_number_less_than_sixteen">ID card number must be 16 characters</string>

    <!-- Home Merchant -->
    <string name="total_earnings">Total Earnings</string>
    <string name="total_transaction_this_month">Total Transaction For This Month</string>
    <string name="total_product_published">Total Product Published</string>
    <string name="received">Received</string>
    <string name="accept">Accepted</string>
    <string name="ready">Ready</string>

    <!-- Home Merchant Dummy -->
    <string name="product_name">Product Name</string>
    <string name="product_type">Product Type</string>
    <string name="product_address">Product Address</string>

    <!-- Dialog Message -->
    <string name="session_has_expired">Your session has expired</string>

</resources>