<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_horizontal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_received"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/received"
        android:textAllCaps="false"
        style="@style/AppCompatButton.Filled.Yellow.Rounded"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_accepted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:textAllCaps="false"/>

</androidx.appcompat.widget.LinearLayoutCompat>