<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_sort_filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp">

        <RadioButton
            android:id="@+id/radB_lowest_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lowest_price"
            android:layout_marginTop="@dimen/_10sdp"/>

        <RadioButton
            android:id="@+id/radB_highest_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highest_price"
            android:layout_marginTop="@dimen/_10sdp"/>

        <RadioButton
            android:id="@+id/radB_highest_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highest_rating"
            android:layout_marginTop="@dimen/_10sdp"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>