<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_8sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_inbox_empty" />

    <TextView
        style="@style/Text.Medium.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/label_cant_accessed" />

    <TextView
        style="@style/Text.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_sub_title_cant_access" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_login_page"
        style="@style/Button.Filled.Yellow.Rounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/label_go_to_login_page" />
</androidx.appcompat.widget.LinearLayoutCompat>