<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/_10sdp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_faq_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_faq_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Medium.Bold"
                android:text="@string/faq_question"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_arrow_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_faq_question"
                app:layout_constraintBottom_toBottomOf="@+id/tv_faq_question"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_faq_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/cv_faq_question"
        app:cardElevation="@dimen/_10sdp"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_faq_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Text.Medium"
                android:text="@string/question"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.Medium.Bold"
                android:text="@string/hide"
                app:layout_constraintTop_toBottomOf="@+id/tv_faq_answer"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>