<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_8sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_calendar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toStartOf="@+id/ll_date"
            app:layout_constraintEnd_toEndOf="@+id/ll_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ll_date">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_image_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/rounded_yellow" />

        </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="@color/yellow_ffa216"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_item_title"
            app:layout_constraintTop_toBottomOf="@+id/ll_calendar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_item_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                style="@style/Text.Small"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                style="@style/Text.Small"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_item_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                style="@style/Text.Small"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>




        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            style="@style/Text.Medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ll_calendar" />

        <View
            android:id="@+id/v_1"
            android:layout_width="0dp"
            android:layout_height="2dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
            app:layout_constraintStart_toEndOf="@+id/ll_calendar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_service_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_type"
            android:drawableStart="@drawable/ic_baseline_hotel_24"
            android:gravity="center"
            style="@style/Text.Small"
            app:layout_constraintTop_toBottomOf="@+id/v_1"
            app:layout_constraintStart_toEndOf="@+id/ll_calendar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            style="@style/Text.Small"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_name"
            app:layout_constraintStart_toEndOf="@+id/ll_calendar" />

        <View
            android:id="@+id/v_2"
            android:layout_width="0dp"
            android:layout_height="2dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_address"
            app:layout_constraintStart_toEndOf="@+id/ll_calendar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_price"
            style="@style/Text.Medium"
            android:textColor="@color/yellow_ffa216"
            app:layout_constraintTop_toBottomOf="@+id/v_2"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>